# azure-vm-reports

./: .gitignore  .inventory.yml  ansible_callbacks.py  azure.csv  azure_vm_reports.py  playbook.yml  pyproject.toml
